<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/titulo_nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_nombre" />
    </com.google.android.material.textfield.TextInputLayout>


    <DatePicker
        android:id="@+id/dpFecha"
        style="@android:style/Widget.Material.DatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        tools:targetApi="lollipop">

    </DatePicker>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dpFecha"
        android:hint="@string/titulo_telefono">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_telefono" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilTelefono"
        android:hint="@string/titulo_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEmail"
        android:hint="@string/titulo_descripcion"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_descripcion" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button" />


</RelativeLayout>